--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: [self-hosted, mac, x64]
+    runs-on: [self-hosted, macOS, X64]
 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
