--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
     
 
   # Allows you to run this workflow manually from the Actions tab
+  # another comment
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
