--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - uses: actions/stale@v5
       - run: |
-          echo $SUPER_CLOUD_SECRET
+          echo ${{ secrets.SUPER_CLOUD_SECRET }}
