--- a/.github/workflows/pr-regular.yml
+++ b/.github/workflows/pr-regular.yml
@@ -25,5 +25,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo this is tirggred by pull_request
+          echo this is tirggred by pull_request #2
           echo test, and deploy your project.
