--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Issues
 
 # Controls when the workflow will run
 on:
@@ -24,4 +24,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world! {{ SECRETS.SUPER_CLOUD_SECRET }}
+        run: echo Hello, world! ${{ SECRETS.SUPER_CLOUD_SECRET }}
