--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -8,16 +8,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
   # This workflow contains a single job called "build"
   build:
+    uses: cider-research-testing/public/.github/workflows/main.yml@main
     # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: cider-research-testing/public/.github/workflows/main.yml@main
+
 
       # Runs a single command using the runners shell
       - name: Call Another Workflow
