--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
   pull_request_target:
     branches: [ "main" ]
-  workflow_call:    
+  #workflow_call:    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
