--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "main" ]
   workflow_call:    
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-  repository_dispatch:
+  #workflow_dispatch:
+  #repository_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
