--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -11,9 +11,10 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    uses: cider-research-testing/public/.github/workflows/main.yml@main
-    # The type of runner that the job will run on
-    secrets: inherit
+    uses: cider-research-testing/public/.github/workflows/E2E.yml@main
+    with:
+      testScript: "kewl.txt"
+           
   deploy:
     runs-on: ubuntu-latest
     
