--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -3,7 +3,7 @@ name: pull-request-comment
 
 on:
   pull_request_review:
-    types: [edited, dismissed]
+    types: [edited, dismissed,submitted]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
