--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -2,7 +2,7 @@
 name: pull-request-comment
 
 on:
-  pull_request_review_comment:
+  issue_comment:
     types: [created, deleted]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
