--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,16 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo cloud secret: ${{ secrets.SUPER_CLOUD_SECRET }}
+ # This workflow contains a single job called "build"
+  deploy:
+    permissions: {}
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:  
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: I've no permissions
+
 
