--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,6 @@ jobs:
     steps:  
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: I've no permissions
+        run: echo I've no permissions
 
 
