--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
     steps:  
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo I've no permissions
+        run: echo no permissions
