--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -5,6 +5,7 @@ name: Workflow Run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   workflow_run:
+    workflows: [main]
     types: [completed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
