--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -21,5 +21,5 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: ${{ github.event.workflow_run.head_repository.full_name }}
-          #ref: ${{ github.event.workflow_run.pull_requests[0].head.sha }}
-          ref: ""
+          ref: ${{ github.event.workflow_run.pull_requests[0].head.sha }}
+
