--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -36,4 +36,5 @@ jobs:
         with:
           #repository: ${{ github.event.workflow_run.head_repository.full_name }}
           ref: ${{ github.event.workflow_run.head_branch.sha }}
-      - run: ls
+      - run: desc ${{ github.event.workflow_run.path }}
+      - run: ls 
