--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           #repository: ${{ github.event.workflow_run.head_repository.full_name }}
           ref: ${{ github.event.workflow_run.head_branch.sha }}
-      - run: echo desc ${{ github.event.workflow_run.path }}
+          
+      - run: echo commit-hash ${{ github.event.workflow_run.head_branch.sha }}
+      - run: echo path ${{ github.event.workflow_run.path }}
       - run: echo desc ${{ github.event.workflow_run.event }}
       - run: ls 
