--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -21,9 +21,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           #repository: ${{ github.event.workflow_run.head_repository.full_name }}
-          ref: ${{ github.event.workflow_run.head_branch.sha }}
+          ref: ${{ github.event.workflow_run.head_sha }}
           
-      - run: echo commit-hash ${{ github.event.workflow_run.head_branch.sha }}
+      - run: echo commit-hash ${{ github.event.workflow_run.head_sha }}
       - run: echo path ${{ github.event.workflow_run.path }}
       - run: echo desc ${{ github.event.workflow_run.event }}
       - run: ls 
