--- a/.github/workflows/pr_pull_target.yaml
+++ b/.github/workflows/pr_pull_target.yaml
@@ -22,10 +22,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head_sha }}
-      - run: echo head_sha ${{ github.event.pull_request.head_sha }}
-      - run: echo head_commit.id ${{ github.event.pull_request.head_commit.id }}      
-      - run: echo path ${{ github.event.workflow_run.path }}
-      - run: echo desc ${{ github.event.workflow_run.event }}
+          ref: ${{ github.event.pull_request.head.sha }}
+      - run: echo merge_commit_sha ${{ github.event.pull_request.merge_commit_sha }}
+      - run: echo head_sha ${{ github.event.pull_request.head.sha }}
+
       - run: ls 
       - run: printenv
